@@ -2,9 +2,18 @@ package com.evolveum.midpoint.provisioning.ucf.api;
 
 import com.evolveum.midpoint.prism.PrismContainerValue;
 import com.evolveum.midpoint.schema.AbstractOptions;
+import com.evolveum.midpoint.schema.processor.CompleteResourceSchema;
+import com.evolveum.midpoint.schema.processor.ResourceSchema;
+import com.evolveum.midpoint.schema.processor.ResourceSchemaFactory;
 import com.evolveum.midpoint.schema.result.OperationResult;
 
 import com.evolveum.midpoint.util.ShortDumpable;
+
+import com.evolveum.midpoint.util.exception.ConfigurationException;
+import com.evolveum.midpoint.util.exception.SchemaException;
+import com.evolveum.midpoint.xml.ns._public.common.common_3.ResourceType;
+
+import org.jetbrains.annotations.NotNull;
 
 import javax.xml.namespace.QName;
 import java.io.Serializable;
@@ -20,11 +29,14 @@ import java.util.List;
 public class ConnectorConfigurationOptions extends AbstractOptions implements Cloneable, Serializable, ShortDumpable {
 
     /**
-     * The list of the object classes which should be generated in schema (null or empty means "all").
+     * The list of the object classes which should be generated in schema (empty means "all").
      *
-     * The list is immutable. Ensured by the setter method.
+     * The list is immutable. (Ensured by the setter method.)
      */
-    private final List<QName> generateObjectClasses;
+    @NotNull private final List<QName> generateObjectClasses;
+
+    /** Transforms raw schema to the {@link CompleteResourceSchema}. The connector needs to have full definitions. */
+    @NotNull private final CompleteSchemaProvider completeSchemaProvider;
 
     /**
      * If set to `true`, the connector configuration is not ready to be shared with other clients,
@@ -36,27 +48,39 @@ public class ConnectorConfigurationOptions extends AbstractOptions implements Cl
      */
     private final Boolean doNotCache;
 
-    public static final ConnectorConfigurationOptions DEFAULT = new ConnectorConfigurationOptions();
-
     public ConnectorConfigurationOptions() {
-        generateObjectClasses = null;
+        generateObjectClasses = List.of();
+        completeSchemaProvider = CompleteSchemaProvider.none();
         doNotCache = null;
     }
 
     // Assuming generateObjectClasses is immutable. Not wrapping it here, to avoid re-wraps.
-    private ConnectorConfigurationOptions(List<QName> generateObjectClasses, Boolean doNotCache) {
+    private ConnectorConfigurationOptions(
+            @NotNull List<QName> generateObjectClasses,
+            @NotNull CompleteSchemaProvider completeSchemaProvider,
+            Boolean doNotCache) {
         this.generateObjectClasses = generateObjectClasses;
+        this.completeSchemaProvider = completeSchemaProvider;
         this.doNotCache = doNotCache;
     }
 
-    public List<QName> getGenerateObjectClasses() {
+    public @NotNull List<QName> getGenerateObjectClasses() {
         return generateObjectClasses;
     }
 
     public ConnectorConfigurationOptions generateObjectClasses(List<QName> value) {
         return new ConnectorConfigurationOptions(
-                value != null ? Collections.unmodifiableList(value) : null,
+                value != null ? Collections.unmodifiableList(value) : List.of(),
+                completeSchemaProvider,
                 doNotCache);
+    }
+
+    public @NotNull CompleteSchemaProvider getCompleteSchemaProvider() {
+        return completeSchemaProvider;
+    }
+
+    public ConnectorConfigurationOptions completeSchemaProvider(@NotNull CompleteSchemaProvider completeSchemaProvider) {
+        return new ConnectorConfigurationOptions(generateObjectClasses, completeSchemaProvider, doNotCache);
     }
 
     public Boolean getDoNotCache() {
@@ -68,7 +92,7 @@ public class ConnectorConfigurationOptions extends AbstractOptions implements Cl
     }
 
     public ConnectorConfigurationOptions doNotCache(boolean value) {
-        return new ConnectorConfigurationOptions(generateObjectClasses, value);
+        return new ConnectorConfigurationOptions(generateObjectClasses, completeSchemaProvider, value);
     }
 
     @Override
@@ -84,6 +108,22 @@ public class ConnectorConfigurationOptions extends AbstractOptions implements Cl
             return (ConnectorConfigurationOptions) super.clone();
         } catch (CloneNotSupportedException e) {
             throw new AssertionError();
+        }
+    }
+
+    public interface CompleteSchemaProvider extends Serializable {
+
+        CompleteResourceSchema completeSchema(ResourceSchema rawSchema)
+                throws SchemaException, ConfigurationException;
+
+        static @NotNull CompleteSchemaProvider forResource(@NotNull ResourceType resource) {
+            return (rawSchema) -> ResourceSchemaFactory.parseCompleteSchema(resource, rawSchema);
+        }
+
+        static @NotNull CompleteSchemaProvider none() {
+            return (rawSchema) -> {
+                throw new UnsupportedOperationException();
+            };
         }
     }
 }
